Add Clean Architecture and getAllTouristPlaces

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/md_theme_surfaceDim"
-    tools:context=".SplashActivity">
+    tools:context=".ui.splash.SplashActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/splash_group"
