--- a/app/src/main/res/layout/activity_home_detail.xml
+++ b/app/src/main/res/layout/activity_home_detail.xml
@@ -5,13 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_theme_surface"
-    tools:context=".MainActivity">
+    tools:context=".ui.home.detail.HomeDetailActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TOURIST MAP"
+        android:text="DETAIL"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
