--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="122.88"
+    android:viewportHeight="122.88">
+  <group android:scaleX="0.4"
+      android:scaleY="0.4"
+      android:translateX="36.864"
+      android:translateY="36.864">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#FF000000"
+        android:pathData="M16.63,105.75c0.01,-4.03 2.3,-7.97 6.03,-12.38L1.09,79.73c-1.36,-0.59 -1.33,-1.42 -0.54,-2.4l4.57,-3.9c0.83,-0.51 1.71,-0.73 2.66,-0.47l26.62,4.5l22.18,-24.02L4.8,18.41c-1.31,-0.77 -1.42,-1.64 -0.07,-2.65l7.47,-5.96l67.5,18.97L99.64,7.45c6.69,-5.79 13.19,-8.38 18.18,-7.15c2.75,0.68 3.72,1.5 4.57,4.08c1.65,5.06 -0.91,11.86 -6.96,18.86L94.11,43.18l18.97,67.5l-5.96,7.47c-1.01,1.34 -1.88,1.23 -2.65,-0.07L69.43,66.31L45.41,88.48l4.5,26.62c0.26,0.94 0.05,1.82 -0.47,2.66l-3.9,4.57c-0.97,0.79 -1.81,0.82 -2.4,-0.54l-13.64,-21.57c-4.43,3.74 -8.37,6.03 -12.42,6.03C16.71,106.24 16.63,106.11 16.63,105.75L16.63,105.75z"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
