--- a/app/src/main/res/layout/activity_home_map.xml
+++ b/app/src/main/res/layout/activity_home_map.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.map.HomeMapActivity">
 
-    <TextView
+    <fragment
+        android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="MAP"
-        android:textAlignment="center"
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
